update index message

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,7 +12,7 @@
     <div class="main-content">
         {{>header}}
 
-        <p>Use this site to get your weather.</p>
+        <p>Use this site to get your weather but only a couple times because I only have 250 API requests per month to Weatherstack lmao.</p>
 
         <form>
             <input placeholder="Enter a location...">
